gitops/monitoring/controllers/lab/kube-prometheus-stack/prometheus-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: prometheus-basic-auth
    removeHeader: true
